# linkedin

./: .gitignore  README.md  coronavirus.R  find_unpitched_prospects.R  linkedin_quanteda.R  linkedin_reconsiliation.R  test2.R  test4.R  testing.R  tmp.R  update_contact_master.R  world_population.csv
Python/: .env.example  .gitignore  Dockerfile  Dockerfile.deploy  README.md  analysis.csv  analysis.ipynb  analysis.tsv  analysis.txt  build.cmd  collection-tocsv.py  deploy-gcs.cmd  explore.ipynb  functions.py  intro.ipynb  main.py  profile.json  pyproject.toml  requirements.txt  review.ipynb  start.cmd  test_gemini.py
Python/.devcontainer/: Dockerfile  devcontainer.json
Rscripts/: .Rhistory  README.md  coronavirus.R  find_unpitched_prospects.R  linkedin_quanteda.R  linkedin_quanteda_fromcms.R  linkedin_reconsiliation.R  test2.R  test3.R  test4.R  testing.R  tmp.R  update_contact_master.R  world_population.csv
